Fix dropZone overflow

--- a/layout/default/FormField/File/default.less
+++ b/layout/default/FormField/File/default.less
@@ -35,6 +35,7 @@ input {
 
 .dropZone {
   position: relative;
+  overflow: hidden;
   text-align: center;
   outline: 3px dashed @colorFgBorderEmphasize1;
   outline-offset: -3px;
